updated auth and changes to logic